<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/weather_partlycloudy"
            android:title="@string/weather" />
        <item
            android:id="@+id/cities"
            android:checked="true"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/cities" />
        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/settings"
            android:checkable="false"
            android:title="@string/settings" />

        <item
            android:id="@+id/about_us_item"
            android:icon="@drawable/alert_circle"
            android:checkable="false"
            android:title="@string/about_us" />
    </group>
</menu>