<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:id="@+id/swipe_refresh"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="81dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/city_name_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />


            <narek.example.com.yandex_weather_app.ui._common.widget.WeatherImageView
                android:id="@+id/weather_img"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_update_date_tv"
                tools:layout_editor_absoluteY="93dp"
                android:layout_width="173dp"
                android:layout_height="141dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/temperature_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <View
                android:id="@+id/textView4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature_tv"
                android:layout_width="100dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="40dp"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/weather_update_date_tv"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView7"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/weather_windy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="31dp" />

            <ImageView
                android:id="@+id/imageView8"
                app:layout_constraintRight_toLeftOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/ic_network_check_white_24px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="63dp"
                android:layout_marginTop="31dp" />

            <ImageView
                android:id="@+id/imageView9"
                app:layout_constraintLeft_toRightOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/water_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="71dp"
                android:layout_marginTop="31dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                app:layout_constraintGuide_begin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/textView11"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/wind"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView12"
                app:layout_constraintRight_toLeftOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="42dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/pressure"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView13"
                app:layout_constraintLeft_toRightOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/humidity"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/wind_speed_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pressure_tv"
                app:layout_constraintRight_toLeftOf="@+id/wind_speed_tv"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="31dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/humidity_tv"
                app:layout_constraintLeft_toRightOf="@+id/wind_speed_tv"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView10"
                app:layout_constraintLeft_toRightOf="@+id/temperature_tv"
                app:layout_constraintTop_toBottomOf="@+id/weather_img"
                app:srcCompat="@drawable/temperature_celsius"
                android:layout_width="35dp"
                android:layout_height="33dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="3dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
